fix styles for dropdown lists. AG-24992
Squashed commit of the following:

commit d183c799267c7228834d2697f9cee82b7b867159
Merge: b623d505 8edd0e8d
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Sep 8 16:11:42 2023 +0300

    Merge branch 'master' into fix/AG-24992

commit b623d5052337c13ecf8e03813ff980d6ca140b20
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Sep 8 12:58:13 2023 +0300

    fix styles for dropdown lists

--- a/src/options/components/Exclusions/Actions/actions.pcss
+++ b/src/options/components/Exclusions/Actions/actions.pcss
@@ -38,10 +38,10 @@
             display: flex;
 
             &:hover {
-                background: var(--grayF7);
+                background-color: var(--grayF3);
 
                 @media (prefers-color-scheme: dark) {
-                    background-color: #4d4d4d;
+                    background-color: var(--grayD8);
                 }
             }
         }
@@ -54,9 +54,9 @@
 
 .light-mode {
     .actions {
-        &__more-actions-list li {
+        &__more-actions-list button {
             &:hover {
-                background-color: #f3f3f3;
+                background-color: var(--grayF3);
             }
         }
     }
@@ -64,9 +64,9 @@
 
 .dark-mode {
     .actions {
-        &__more-actions-list li {
+        &__more-actions-list button {
             &:hover {
-                background-color: #4d4d4d;
+                background-color: var(--grayD8);
             }
         }
     }
